// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check firebase config 1`] = `
Object {
  "apiKey": undefined,
  "appId": "1:641332133381:web:77c83f2ffc96f51d7da66c",
  "authDomain": "reallyluis-13b43.firebaseapp.com",
  "databaseURL": "https://reallyluis-13b43.firebaseio.com",
  "messagingSenderId": "641332133381",
  "projectId": "reallyluis-13b43",
  "storageBucket": "reallyluis-13b43.appspot.com",
}
`;

exports[`darkmode events update body class on darkmode toggled 1`] = `
<body>
  <div
    class="darkmode-toggle"
  >
      
    <input
      class="darkmode-toggle__checkbox"
      id="darkmode-toggle"
      type="checkbox"
    />
      
    <label
      class="darkmode-toggle__label"
      for="darkmode-toggle"
    >
          Toggle
    </label>
  </div>
</body>
`;

exports[`navigation events update body class on nav clicked 1`] = `
<body
  class=""
>
  <button
    class="nav-toggle"
  />
  <nav
    class="nav"
  >
      
    <ul
      class="nav__list"
    >
          
      <li
        class="nav__item"
      >
             
        <a
          class="nav__link"
          href="#one"
        >
          one
        </a>
      </li>
        
    </ul>
  </nav>
</body>
`;

exports[`navigation events update body class on nav toggled 1`] = `
<body
  class="nav-open"
>
  <button
    class="nav-toggle"
  />
  <nav
    class="nav"
  >
      
    <ul
      class="nav__list"
    >
          
      <li
        class="nav__item"
      >
             
        <a
          class="nav__link"
          href="#one"
        >
          one
        </a>
      </li>
        
    </ul>
  </nav>
</body>
`;

exports[`scroll events update after scroll greater than 75% of view 1`] = `
<body
  class="scrolled"
>
  <div
    style="height:1000px"
  >
     
    <div
      class="page-controls__comment animate-out"
    >
       
    </div>
  </div>
</body>
`;

exports[`scroll events update after scroll greater than 100 1`] = `
<body
  class="scrolled"
>
  <div
    style="height:1000px"
  >
     
    <div
      class="page-controls__comment"
    >
       
    </div>
  </div>
</body>
`;

exports[`scroll events update after scroll less than 100 1`] = `
<body
  class=""
>
  <div
    style="height:1000px"
  >
     
    <div
      class="page-controls__comment"
    >
       
    </div>
  </div>
</body>
`;
